kubernetes/99-argocd/07-logto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto
  namespace: logto
  labels:
    app: logto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: logto
  template:
    metadata:
      labels:
        app: logto
    spec:
      volumes:
        - name: connectors
          emptyDir: {}
      containers:
        - image: svhd/logto:latest
          name: logto
