kubernetes/99-argocd/07-logto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
  namespace: logto
spec:
  selector:
    app: logto
  ports:
    - name: endpoint
      port: 3001
      targetPort: 3001
      protocol: TCP
    - name: admin
      port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
