kubernetes/99-argocd/07-logto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logto
  namespace: logto
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - logto.6degrees.com.sa
        - logto-admin.6degrees.com.sa
      secretName: logto-tls
  rules:
    - host: logto.6degrees.com.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logto
                port:
                  number: 3001
    - host: logto-admin.6degrees.com.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logto
                port:
                  number: 3002
